--- a/spotify-master/index.html
+++ b/spotify-master/index.html
@@ -33,12 +33,14 @@
             </div>
         </div>
         
-        <div class="main-bottom">
-            <div class="bottom-showcase">
-                <div class="showcase-text">
-                    <h1 class="one">Listening is <span class="one-bit">everything</span></h1>
-                    <h4>Miljontals låtar och podcasts. Inget kreditkort behövs.</h4>
-                    <a href="#" class="btn">Skaffa spotify free</a>
+        <div class="main-hero">
+            <div class="main-hero-showcase">
+                <div class="container">
+                    <div class="showcase-text">
+                        <h1 class="one">Listening is <span class="one-bit">everything</span></h1>
+                        <h4>Miljontals låtar och podcasts. Inget kreditkort behövs.</h4>
+                        <a href="#" class="btn">Skaffa spotify free</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -78,15 +80,15 @@
                     </div>
                     <div class="footer-sm">
                         <div class="social-media">
-                            <span class="sm-icon">
+                            <a href="#" class="sm-icon">
                                 <i class="fab fa-instagram"></i>
-                            </span>
-                            <span class="sm-icon">
+                            </a>
+                            <a href="#" class="sm-icon">
                                 <i class="fab fa-twitter"></i>
-                            </span>
-                            <span class="sm-icon">
+                            </a>
+                            <a href="#" class="sm-icon">
                                 <i class="fab fa-facebook-f"></i>
-                            </span>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -101,8 +103,9 @@
                             <li class="bottom-item"><a href="#" class="bottom-item-link">Intergritetspolicy</a></li>
                             <li class="bottom-item"><a href="#" class="bottom-item-link">Cookies</a></li>
                             <li class="bottom-item"><a href="#" class="bottom-item-link">Om annonser</a></li>
-                            <li class="bottom-item">&copy; 2020 Spotify AB</li>
                         </ul>
+                        
+                        <span class="bottom-copy">&copy; 2020 Spotify AB</span>
                     </div>
                 </div>
             </div>
